# reviiyot

./: CMakeLists.txt
config/: mytest  testeasy
include/: Card.h  CardRequest.h  Deck.h  Game.h  Hand.h  Player.h  main.h
src/: Deck.cpp  Game.cpp  Hand.cpp  reviiyot.cpp
src/Cards/: Card.cpp  CardRequest.cpp  FigureCard.cpp  NumericCard.cpp
src/Players/: Player.cpp  PlayerType1.cpp  PlayerType2.cpp  PlayerType3.cpp  PlayerType4.cpp
